--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=postgres
 DB_PORT=5432
-HOST_DB=db
+HOST_DB=localhost
 SSLmode=disable
 DRIVER=postgres
 
